edit " ajout et suppression nouvelle zone "
